project renamed